# ADR

./: .commitlintrc.json  .env.example  .gitignore  .gitleaks.toml  ACCESSIBILITY.md  ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  TESTING.md  TRACEABILITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.env
.github/: dependabot.yml
.github/workflows/: ci.yml
ADR/: 001-langgraph-over-raw-function-calling.md  002-postgres-pgvector-over-dedicated-vector-db.md  003-fastapi-unified-gateway.md  004-mock-adapter-pattern.md  005-dual-model-strategy.md  006-mongodb-groq-migration.md
apps/fan-pwa/: Dockerfile  package.json  tsconfig.json
apps/fan-pwa/src/app/: globals.css  layout.tsx  page.tsx
apps/volunteer-app/: Dockerfile  index.html  package.json
apps/volunteer-app/src/: App.tsx  index.css
apps/web-dashboard/: Dockerfile  next.config.js  package.json
apps/web-dashboard/src/app/: globals.css  layout.tsx  page.tsx
services/api-gateway/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/api-gateway/app/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py  seed.py
services/api-gateway/app/adapters/: __init__.py  anthropic_llm.py  groq_llm.py  mock_llm.py
services/api-gateway/app/agents/: __init__.py  orchestrator.py
services/api-gateway/app/core/: __init__.py  auth.py  density_evaluator.py  pathfinding.py
services/api-gateway/app/ports/: __init__.py  llm_provider.py
services/api-gateway/app/routes/: __init__.py  auth.py  chat.py  crowd.py  decisions.py  incidents.py  navigation.py  venues.py
services/api-gateway/tests/: conftest.py
services/api-gateway/tests/unit/: test_api_routes.py  test_auth.py  test_density_evaluator.py  test_groq_llm.py  test_mongodb.py  test_pathfinding.py  test_seed_config.py
services/crowd-simulator/: requirements.txt
services/crowd-simulator/app/: __init__.py  main.py
